--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <spring.version>4.0.4.RELEASE</spring.version>
+        <spring.version>3.2.8.RELEASE</spring.version>
     </properties>
 
 
@@ -45,6 +45,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
