Change test to use MockMvc

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.4</version>
@@ -81,6 +82,18 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>TomcatServer</server>
+                    <path>/spring_test_example</path>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
